--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,7 @@
     "NEXT_PUBLIC_FLIX_API_KEY": "@next-public-flix-api-key"
   },
   "images": {
+    "sizes": [640, 750, 828, 1080, 1200, 1920, 2048, 3840],
     "remotePatterns": [
       {
         "protocol": "https",
