--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
+  "installCommand": "npm install",
   "framework": "nextjs",
   "functions": {
     "src/app/api/**/*.ts": {
       "runtime": "@vercel/node"
     }
-  },
-  "env": {
-    "NEXT_PUBLIC_TMDB_API_KEY": "@next-public-tmdb-api-key",
-    "NEXT_PUBLIC_FLIX_API_KEY": "@next-public-flix-api-key"
   },
   "images": {
     "sizes": [640, 750, 828, 1080, 1200, 1920, 2048, 3840],
