--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "Version": "filmsforyou@0.0.1",
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "npm run build",
   "outputDirectory": ".next",
   "installCommand": "npm install",
